# cord_mpc_analyzer

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  cord_mpc.py  test_agepyramide.tmuxp.yml  test_timeseries_cov.tmuxp.yml
include/: config.h  histogram_circuit_builder.h  motiontypedefs.h  typedefs.h  util.h
src/: cord-mpc_main.cpp  histogram_circuit_builder.cpp  util.cpp
testing/: test_epistasis.tmuxp.yaml
